--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="container" >
             <div class="row" style="padding-bottom:5px;">
                 <div class="col-md-6">
-                    <img src="imgs/logo.png" style="width:20%;"class="img-responsive" id="logoImg" alt="Carrington Life">
+                    <img src="imgs/logo.png" class="img-responsive" id="logoImg" alt="Carrington Life">
                 </div>
                 <div class="col-md-6" id="phoneTop">
                     <a href="tel:18885555555">
