--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div id="topSection" style="background:#fff;">
         <div class="container" >
             <div class="row" style="padding-bottom:5px;">
-                <div class="col-xxs-6">
+                <div class="col-xs-6">
                     <img src="imgs/logo.png" class="img-responsive" id="logoImg" alt="Carrington Life">
                 </div>
-                <div class="col-xxs-6" id="phoneTop">
+                <div class="col-xs-6" id="phoneTop">
                     <a href="tel:18885555555">
                         <i class="fa fa-phone fa-fw"></i>1-888-555-5555</a>
                 </div>
