added footnote and secure logos to the end of form

--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
                         <input type="button" name="previous" class="previous action-button-previous" value="Previous" />
                         <!-- <input type="button" name="next" class="next action-button" value="Next" /> -->
                         <input type="button" name="submit" class="submit action-button" value="Submit" />
+                        <div class="md-form" style="font-size:10px">
+                            <img src="imgs/secure-logos.png" alt="secure" style="display:block; margin-left: auto; margin-right: auto;margin-top:10px; margin-bottom: 10px; width:80%;">
+                            <hr class="hr-light" style="margin:1px">
+                            <p style="margin-bottom: 0; text-align: left;">
+                                By clicking the "GET QUOTES NOW!" button, you agree to our Privacy Policy and authorize Concord Debt Relief and its partners
+                                to contact you at the phone number you entered using automated technology including auto-dialers, pre-recorded messages,
+                                and text messages, even if your phone is a mobile number or is currently listed on any state, federal, or corporate
+                                "Do Not Call" list, and you are not required to give your consent as a condition of service.</p>
+                        
+                        </div>
                     </fieldset>
                     
                 </form>
