added a second column of content to the page.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.9.0/bootstrap-slider.js"></script>
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+            crossorigin="anonymous">
+
         <!-- Custom CSS -->
         <link href="style.css" rel="stylesheet">
     </head>
@@ -145,6 +148,26 @@
             </div>
         </div>
         <!-- End of MultiStep Form Widget -->
+        <!-- Start of content section  -->
+        <div id="contentTwo">
+            <div class="container" >
+                <h2>DEBT RELIEF IN 3 EASY STEPS!</h2>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <i class="fas fa-edit icons"></i>
+                        <h4>Complete the Secure Application Above</h4>
+                    </div>
+                    <div class="col-sm-4 ">
+                        <i class="fas fa-hand-holding-usd icons "></i>
+                    <h4>Get a 100% Free, No Obligation Consultation with a Debt Expert</h4> 
+                    </div>
+                    <div class="col-sm-4">
+                        <i class="fas fa-handshake icons "></i>
+                        <h4>Resolution of your Debt</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="1000" data-slider-max="100000" data-slider-step="1000"
             data-slider-value="10000" /> -->
