added classes and padding to the three steps so it will be more spaced on mobile

--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
             <div class="container" >
                 <h2>DEBT RELIEF IN 3 EASY STEPS!</h2>
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 threeStep">
                         <i class="fas fa-edit icons"></i>
                         <h4>Complete the Secure Application Above</h4>
                     </div>
-                    <div class="col-sm-4 ">
+                    <div class="col-sm-4 threeStep">
                         <i class="fas fa-hand-holding-usd icons "></i>
                     <h4>Get a 100% Free, No Obligation Consultation with a Debt Expert</h4> 
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 threeStep">
                         <i class="fas fa-handshake icons "></i>
                         <h4>Resolution of your Debt</h4>
                     </div>
