--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         <!-- <input type="button" name="next" class="next action-button" value="Next" /> -->
                         <input type="button" name="submit" class="submit action-button" value="Submit" />
                         <div class="md-form" style="font-size:10px">
-                            <img src="imgs/secure-logos.png" alt="secure" style="display:block; margin-left: auto; margin-right: auto;margin-top:10px; margin-bottom: 10px; width:80%;">
+                            <img src="imgs/secure-logos.png" alt="secure" id="secureLogos">
                             <hr class="hr-light" style="margin:1px">
                             <p style="margin-bottom: 0; text-align: left;">
                                 By clicking the "GET QUOTES NOW!" button, you agree to our Privacy Policy and authorize Concord Debt Relief and its partners
@@ -148,7 +148,7 @@
             </div>
         </div>
         <!-- End of MultiStep Form Widget -->
-        <!-- Start of content section  -->
+        <!-- Start of content section two -->
         <div id="contentTwo">
             <div class="container" >
                 <h2>DEBT RELIEF IN 3 EASY STEPS!</h2>
@@ -168,9 +168,78 @@
                 </div>
             </div>
         </div>
-
-        <!-- <input id="ex1" data-slider-id='ex1Slider' type="text" data-slider-min="1000" data-slider-max="100000" data-slider-step="1000"
-            data-slider-value="10000" /> -->
+        <!-- End of content section two -->
+        <!-- CTA button -->
+        <button type="button" onclick="scrollToTop(200)" class="btn hoverable ctaBtn" id="btnOne" title="Request A Quote">Get Help Now!</button>
+        <!-- Start of content section three -->
+        <div id="contentThree">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 threeStep">
+                        <h2>FREE CONSULTATION</h2>
+                        <img src="imgs/icon-1.png" class="center-img" alt="">
+                        <div class="ctaTxt">One of our <b>expert Debt Advisors</b> will call you to get the details of your situation for free. Most lawyers
+                        charge for calls, but not Concord Debt Relief.</div>
+                    </div>
+                    <div class="col-md-6 threeStep">
+                        <h2>NO OBLIGATION</h2>
+                        <img src="imgs/icon-2.png" class="center-img" alt="">
+                        <div class="ctaTxt"><b>Our team</b> will contact the IRS and/or State for you and Investigate your situation. They will work to protect your assets
+                        and negotiate a final agreement..</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End of content section three -->
+        <!-- CTA button -->
+        <button type="button" onclick="scrollToTop(200)" class="btn hoverable ctaBtn" id="btnTwo" title="Request A Quote">Get Help Now!</button>
+        <!-- Start of content section Four -->
+        <div id="contentFour">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4 threeStep">
+                        <img src="imgs/ico-1.png" alt="">
+                        <h2>BBB "A" Rated</h2>
+                    </div>
+                    <div class="col-sm-4 threeStep">     
+                        <img src="imgs/ico-2.png" alt="">
+                        <h2>100% Service Guarantee</h2>
+                    </div>
+                    <div class="col-sm-4 threeStep">
+                        <img src="imgs/ico-3.png" alt="">
+                        <h2>Secure &amp; Trusted</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End of content section Four -->
+        <!-- Section Five Logo above footer -->
+        <div id="sectionFive">
+            <div class="container">
+                <div class="col-lg-12 text-center">
+                    <!--  width="20%; padding-top: 20px; padding-bottom: 20px;" -->
+                    <img class="img-responsive centerImg" id="footerLogo" alt="Carrington Life Logo" src="imgs/logo.png">
+                </div>
+            </div>
+        </div>
+        <!-- Blue line fade -->
+        <div class="lineFade"></div>
+        <!-- Footer Section -->
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center" id="altLinks">
+                        <a href="#">Privacy Policy</a> |
+                        <a href="#">Terms of Use</a> |
+                        <a href="#">Unsubscribe</a>
+                    </div>
+                    <div class="col-lg-12 text-center" id="copyRight">
+                        &copy; 2018
+                        <a href="#"> ConcordDebtRelief.com</a> All Rights Reserved.
+                    </div>
+                </div>
+            </div>
+        </footer>
         <!-- Custom Js -->
         <script src="script.js"></script>
     </body>
