--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         
         <!-- MultiStep Form Widget -->
-        <div class="row">
+        <div class="row" id="widgetForm">
             <div class="col-md-6 col-md-offset-3">
                 <form id="msform" name="add">
                     <!-- progressbar -->
